refactor: modularize script editor ui